# petrichor-engine

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  mingw-toolchain.cmake  update_libraries.sh  vcpkg.json
engine/include/: ptc_camera.h  ptc_camera.hpp  ptc_component.h  ptc_component.hpp  ptc_console.h  ptc_console.hpp  ptc_debug.hpp  ptc_debug_structs.hpp  ptc_face_token.hpp  ptc_file_reader.hpp  ptc_font.h  ptc_font.hpp  ptc_gui.h  ptc_gui.hpp  ptc_gui_structs.hpp  ptc_input.h  ptc_input.hpp  ptc_json.hpp  ptc_json_structs.hpp  ptc_layout_structs.hpp  ptc_light.h  ptc_light.hpp  ptc_material.h  ptc_material.hpp  ptc_math.h  ptc_math.hpp  ptc_mesh.h  ptc_mesh.hpp  ptc_mesh_filter.hpp  ptc_mesh_loader.hpp  ptc_mesh_renderer.hpp  ptc_object.h  ptc_object.hpp  ptc_renderer.h  ptc_renderer.hpp  ptc_shader.h  ptc_shader.hpp  ptc_state.h  ptc_state.hpp  ptc_text.h  (+9 more)
engine/src/: ptc_camera.cpp  ptc_component.cpp  ptc_console.cpp  ptc_debug.cpp  ptc_file_reader.cpp  ptc_font.cpp  ptc_gui.cpp  ptc_input.cpp  ptc_json.cpp  ptc_light.cpp  ptc_material.cpp  ptc_math.cpp  ptc_mesh.cpp  ptc_mesh_filter.cpp  ptc_mesh_loader.cpp  ptc_mesh_renderer.cpp  ptc_object.cpp  ptc_renderer.cpp  ptc_shader.cpp  ptc_state.cpp  ptc_text.cpp  ptc_texture.cpp  ptc_time.cpp  ptc_transform.cpp  ptc_ui_transform.cpp
resources/models/: Cube.mtl  EthanSword.mtl  cube.blend  cube.mtl  monkey.blend
resources/other/: example.json
resources/shaders/: common_functions.glsl  flat_frag.glsl  fragment_shader.glsl  gui_frag.glsl  gui_vert.glsl  simple_frag.glsl  text_frag.glsl  vertex_shader.glsl
resources/text_files/: 2of12inf_filtered.txt
scripts/: game_main.cpp
scripts/include/: example_header.h  example_header.hpp
scripts/src/: example_source.cpp
scripts/standalone/: example_standalone.cpp  game_manager.cpp  level_2.cpp  level_3.cpp  level_4.cpp  score_tracker.cpp  text_input.cpp  welcome_text_manager.cpp
